Fix småfeil og sonar